improve build system structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,11 @@
 cmake_minimum_required(VERSION 3.31)
 project(schwachmatt)
 
-# use at least C++17
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# generate main executable
-add_executable(schwachmatt
-    src/main.cpp
-    src/main.h
+# create a library from the core source files
+add_library(schwachmatt
     src/attacks.cpp
     src/attacks.h
     src/bitboard.cpp
@@ -25,33 +22,43 @@ add_executable(schwachmatt
     src/types.h
 )
 
-# download googletest into lib/
+# generate the main executable
+add_executable(main src/main.cpp src/main.h)
+# link the main executable with the schwachmatt library
+target_link_libraries(main PRIVATE schwachmatt)
+
+# download and set up GoogleTest in lib/
 include(FetchContent)
 FetchContent_Declare(
     googletest
     URL             https://github.com/google/googletest/archive/b514bdc.zip
     SOURCE_DIR      ${CMAKE_SOURCE_DIR}/lib/googletest
 )
-# prevent overriding the parent project's compiler/linker settings
+# prevent overriding the parent project's compiler/linker settings (required)
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 include(GoogleTest)
 
-# generate test executable
+# enable testing
 enable_testing()
-add_executable(schwachmatt_test
+
+# create the unit test executable
+add_executable(unit_tests
     test/attacks_test.cpp
     test/bitboard_test.cpp
     test/board_test.cpp
     test/main_test.cpp
-    test/perft_test.cpp
 )
+# link unit test executable with the library and GoogleTest
+target_link_libraries(unit_tests PRIVATE schwachmatt GTest::gtest_main)
+target_include_directories(unit_tests PRIVATE ${CMAKE_SOURCE_DIR}/src)
+# discover and register unit tests
+gtest_discover_tests(unit_tests)
 
-# include header files into the test executable
-target_include_directories(schwachmatt_test PRIVATE ${CMAKE_SOURCE_DIR}/src)
-
-# link the test executable with googletest library
-target_link_libraries(schwachmatt_test GTest::gtest_main)
-
-# activate automatic test discovery
-gtest_discover_tests(schwachmatt_test)
+# create the perft test executable
+add_executable(perft test/perft_test.cpp)
+# link perft test executable with the library and GoogleTest
+target_link_libraries(perft PRIVATE schwachmatt GTest::gtest_main)
+target_include_directories(perft PRIVATE ${CMAKE_SOURCE_DIR}/src)
+# discover and register test cases for perft
+gtest_discover_tests(perft)
