--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,27 +5,14 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # create a library from the core source files
-add_library(schwachmatt
-    src/attacks.cpp
-    src/attacks.h
-    src/bitboard.cpp
-    src/bitboard.h
-    src/board.cpp
-    src/board.h
-    src/move.cpp
-    src/move.h
-    src/movegen.cpp
-    src/movegen.h
-    src/utils.cpp
-    src/utils.h
-    src/exceptions.h
-    src/types.h
-)
+add_subdirectory(src/engine)
+add_subdirectory(src/uci)
 
 # generate the main executable
-add_executable(main src/main.cpp src/main.h)
-# link the main executable with the schwachmatt library
-target_link_libraries(main PRIVATE schwachmatt)
+add_executable(main src/main.cpp)
+
+# link the main executable with the required libraries
+target_link_libraries(main PRIVATE engine uci)
 
 # download and set up GoogleTest in lib/
 include(FetchContent)
@@ -50,7 +37,7 @@ add_executable(unit_tests
     test/main_test.cpp
 )
 # link unit test executable with the library and GoogleTest
-target_link_libraries(unit_tests PRIVATE schwachmatt GTest::gtest_main)
+target_link_libraries(unit_tests PRIVATE engine GTest::gtest_main)
 target_include_directories(unit_tests PRIVATE ${CMAKE_SOURCE_DIR}/src)
 # discover and register unit tests
 gtest_discover_tests(unit_tests)
@@ -58,7 +45,7 @@ gtest_discover_tests(unit_tests)
 # create the perft test executable
 add_executable(perft test/perft_test.cpp)
 # link perft test executable with the library and GoogleTest
-target_link_libraries(perft PRIVATE schwachmatt GTest::gtest_main)
+target_link_libraries(perft PRIVATE engine GTest::gtest_main)
 target_include_directories(perft PRIVATE ${CMAKE_SOURCE_DIR}/src)
 # discover and register test cases for perft
 gtest_discover_tests(perft)
